@@ -33,6 +33,7 @@ if post_params:
 
 arch = shared_info.client_profile.get_architecture_template()
 parts = shared_info.install_profile.get_partition_tables()
+advanced = shared_info.advanced_mode
 #Bootloader code yanked from the x86ArchTemplate
 if shared_info.install_profile.get_boot_device():
 	boot_device = shared_info.install_profile.get_boot_device()
@@ -72,16 +73,19 @@ for i,bloader in __builtins__.enumerate(boot_loaders):
 	print '>'+boot_loaders[i][0]+'</td><td>'+boot_loaders[i][1]+"</td></tr>\n"
 ?>
 </table>
-<hr>
-Most bootloaders have the ability to install to either the Master Boot Record (MBR) or some other partition. Most people will want their bootloader installed on the MBR for successful boots, but if you have special circumstances, you can have the bootloader installed to the /boot partition instead. Do you want the boot loader installed in the MBR? (YES is RECOMMENDED)
-<p>
+<: if advanced:
+	<hr>
+	Most bootloaders have the ability to install to either the Master Boot Record (MBR) or some other partition. Most people will want their bootloader installed on the MBR for successful boots, but if you have special circumstances, you can have the bootloader installed to the /boot partition instead. Do you want the boot loader installed in the MBR? (YES is RECOMMENDED)
+	<p>
 <?
 bootmbr = shared_info.install_profile.get_boot_loader_mbr()
 print '<input name="bootmbr" type="checkbox" id="bootmbr" value="True"'
 if bootmbr:
 	print " checked"
 print ">Install to MBR</p>"
-		
+?>
+:>
+<?
 if not boot_device:
 	print _(u"You need to partition before you can select the boot device.")
 if boot_device and boot_device[-1] != 'a':
@@ -93,14 +97,18 @@ if boot_device and boot_device[-1] != 'a':
 	for device in parts:
 		print '<input type="radio" name="boot_drive_choice" value="'+device+'">'+device+"<br>\n"
 ?>
-<br><p>If you have any additional optional arguments you want to pass to the kernel at boot, type them here: 
-<input name="bootargs" type="text" id="bootargs" <?
+<br>
+<: if advanced:
+	<p>If you have any additional optional arguments you want to pass to the kernel at boot, type them here: 
+	<input name="bootargs" type="text" id="bootargs" 
+<?
 bootargs = shared_info.install_profile.get_bootloader_kernel_args()
 if bootargs:
 	print ' value="'+bootargs+'"'
 print '>'
 ?>
-</p>
+	</p>
+:>
 <p>
 <input name="setbootloader" type="submit" id="setbootloader" value="Save Bootloader Settings">
 </p>
