@@ -131,6 +131,7 @@ if post_params:
 <br><% error_msg %><br><br>
 :>
 <form name="CConfig" action="/webgli/clientconfig.pyhtml" method="POST" enctype="multipart/form-data">
+<: if shared_info.advanced_mode:
 <table border="2">
   <tr>
     <td>
@@ -154,6 +155,7 @@ Arch selection string here.<br>
       <hr>Debug Mode: <input name="Verbose" type="radio" value="True">Yes <input name="Verbose" type="radio" value="False" checked>No</td>
   </tr>
 </table>
+:>
 <: if 1: #not GLIUtility.ping("www.gentoo.org"): # and local_install:
 <hr>
 <table>
@@ -177,10 +179,12 @@ Arch selection string here.<br>
       <hr>Enter a DNS server: <input name="dnsserver" type="text" length="50" maxlength="15" value="128.118.25.3"></td>
   </tr>
 </table>
+<: if shared_info.advanced_mode:
 Proxy Information (if necessary):<br>
 HTTP Proxy URI: <input name="http_proxy" type="text" length="70" value=""><br>
 FTP Proxy URI: <input name="ftp_proxy" type="text" length="70" value=""><br>
 RSYNC Proxy URI: <input name="rsync_proxy" type="text" length="70" value="">
+:>
 :>
 <hr>Enable SSH  string here. <br>
 Enable SSH?: <input name="EnableSSH" type="radio" value="True">Yes
@@ -189,13 +193,14 @@ Enable SSH?: <input name="EnableSSH" type="radio" value="True">Yes
 Enter Password:<input name="RootPass1" type="password" length="80" maxlength="80" value=""><br>
 Re-enter Password to verify:<input name="RootPass2" type="password" length="80" maxlength="80" value=""><br>
 
+<: if shared_info.advanced_mode:
 <?
 #Modules to load now.
 status, output = GLIUtility.spawn(r"lsmod | grep -v ^Module | cut -d ' ' -f 1 ", return_output=True)
 ?>
 <hr>List of loaded modules:. <br><% "<br>".join(output.split("\n")) %>
 <br>Additional Modules to Load (space-separated list): <input name="Modules" type="text" length="80" maxlength="80" value=""><br>
-
+:>
 <!-- #Save Client Configuration File.	THIS SHOULD BE A POPUP -->
 <hr><br>Save Client Configuration File string here. <br>
 Filename: <input name="SaveCCFile" type="text" value="clientconfig.xml">
