@@ -1,3 +1,18 @@
 <? include /webgli/top.pyhtml ?>
+<?
+if post_params['amode']:
+	try:
+		if post_params['amode'] == "True":
+			shared_info.advanced_mode = True
+		else:
+			shared_info.advanced_mode = False
+		print "Values set successfully"
+	except:
+		print "ERROR Could not set advanced mode to "+post_params['amode']
+?>
 Welcoming string here.<BR>LOCAL INSTALL ASSUMED FOR THIS FRONT END<br>
+<form name="Advanced" method="post" action="/webgli/index.pyhtml" enctype="multipart/form-data">
+<input type="radio" name="amode" value="True" <? if shared_info.advanced_mode: print "checked" ?> >Advanced Mode<br>
+<input type="radio" name="amode" value="False" <? if not shared_info.advanced_mode: print "checked" ?> >Standard/Newbie Mode
+<input type="submit" name="Submit" value="Set Advanced Mode">
 <? include /webgli/bottom.pyhtml ?>
