@@ -55,6 +55,7 @@ configuri= shared_info.install_profile.get_kernel_config_uri()
     <td><input name="sources" type="radio" value="gentoo-sources" <? if sources == "gentoo-sources": print "checked" ?>>Gentoo</td>
     <td>Gentoo's optimized 2.6+ kernel. (less safe) </td>
   </tr>
+<: if shared_info.advanced_mode:
   <tr>
     <td><input name="sources" type="radio" value="hardened-sources" <? if sources == "hardened-sources": print "checked" ?>>Hardened</td>
     <td>Hardened sources for the 2.6 kernel tree</td>
@@ -67,8 +68,10 @@ configuri= shared_info.install_profile.get_kernel_config_uri()
     <td><input name="sources" type="radio" value="Other" <? if sources not in ["livecd-kernel", "vanilla-sources", "gentoo-sources", "hardened-sources", "grsec-sources"]: print "checked" ?>>Other</td>
     <td>Specify your own here: <input name="manualsouces" type="text" id="manualsouces" value="<? if sources not in ["livecd-kernel", "vanilla-sources", "gentoo-sources", "hardened-sources", "grsec-sources"]: print sources ?>"></td>
   </tr>
+:>
 </table>
 <hr>
+<: if shared_info.advanced_mode:
 <table width="507"	border="1">
   <tr>
     <td colspan="2" scope="col"><p>There are currently two ways the installer can compile a kernel for your new system. You can either provide a previously-made kernel configuration file and use the traditional kernel-compiling procedure (no initrd) or have genkernel automatically create your kernel for you (with initrd).</p>
@@ -82,6 +85,8 @@ configuri= shared_info.install_profile.get_kernel_config_uri()
 <p><input name="bootsplash" type="checkbox" id="bootsplash" value="True" <? if bootsplash: print "checked" ?>>Display the bootsplash screen on startup </p><p>If you have a custom kernel configuration, enter its location (otherwise just leave blank):
 <input name="configuri" type="text" id="configuri" value="<% configuri %>">
 <input name="browseuri" type="button" id="browseuri" value="Browse" onClick="window.open('/webgli/URIBrowser?screen=kernel&baseuri=' + document.kernel.configuri.value, 'uribrowser', 'width=500,height=500,toolbars=no,statusbar=no,menubar=no,scrollbars=yes')">
-</p><p><input name="setkernel" type="submit" id="setkernel" value="Save Kernel Settings"></p>
+</p>
+:>
+<p><input name="setkernel" type="submit" id="setkernel" value="Save Kernel Settings"></p>
 </form>
 <? include /webgli/bottom.pyhtml ?>
