@@ -9,7 +9,7 @@ if post_params:
 		try:
 			shared_info.install_profile.set_network_interfaces(interfaces)
 		except:
-			error_msg = "ERROR: Could not set the network interfaces!<br>\n"
+			error_msg += "ERROR: Could not set the network interfaces!<br>\n"
 	elif post_params['AddIfaceSubmit']:
 		#network interface
 		if post_params['ifacemanual']:
@@ -17,7 +17,7 @@ if post_params:
 		elif post_params['ifacelist']:
 			newnic = post_params['ifacelist']
 		else:
-			error_msg = "ERROR: No Network device selected<br>\n"
+			error_msg += "ERROR: No Network device selected<br>\n"
 		#network type
 		if post_params['Network_Type'] == "dhcp":
 			if post_params['dhcp_options']:
@@ -27,7 +27,7 @@ if post_params:
 			try:
 				shared_info.install_profile.set_network_interfaces(interfaces)
 			except:
-				error_msg = "ERROR: Could not set interface DHCP<br>\n"
+				error_msg += "ERROR: Could not set interface DHCP<br>\n"
 		elif post_params['Network_Type'] == "static":
 			if 'ip' in post_params:
 				newip = post_params['ip']
@@ -41,7 +41,7 @@ if post_params:
 				interfaces[newnic] = (newip, newbroadcast, newnetmask)
 				shared_info.install_profile.set_network_interfaces(interfaces)
 			except:
-				error_msg = "ERROR: Could not add the new interface."
+				error_msg += "ERROR: Could not add the new interface."
 	elif post_params['DelIfaceSubmit']:
 		if post_params['EditIface']:
 			try:
@@ -49,29 +49,29 @@ if post_params:
 				del interfaces[iface]
 				shared_info.install_profile.set_network_interfaces(interfaces)
 			except:
-				error_msg = "ERROR: Could not delete the interface.<BR>\n"	
+				error_msg += "ERROR: Could not delete the interface.<BR>\n"	
 		else:
-			error_msg = "ERROR: No device selected to delete!<br>\n"
+			error_msg += "ERROR: No device selected to delete!<br>\n"
 	if 'dnsserver' in post_params:
 		try:
 			shared_info.install_profile.set_dns_servers(None, post_params['dnsserver'], None)
 		except:
-			error_msg = "ERROR: Could not set the DNS Server<BR>\n"
+			error_msg += "ERROR: Could not set the DNS Server<BR>\n"
 	if 'http_proxy' in post_params:
 		try:
 			shared_info.install_profile.set_http_proxy(None, post_params['http_proxy'], None)
 		except:
-			error_msg = "ERROR: Could not set the HTTP Proxy IP<BR>\n"
+			error_msg += "ERROR: Could not set the HTTP Proxy IP<BR>\n"
 	if 'ftp_proxy' in post_params:
 		try:
 			shared_info.install_profile.set_ftp_proxy(None, post_params['ftp_proxy'], None)
 		except:
-			error_msg = "ERROR: Could not set the FTP Proxy IP<BR>\n"
+			error_msg += "ERROR: Could not set the FTP Proxy IP<BR>\n"
 	if 'rsync_proxy' in post_params:
 		try:
 			shared_info.install_profile.set_rsync_proxy(None, post_params['rsync_proxy'], None)
 		except:
-			error_msg = "ERROR: Could not set the RSYNC Proxy IP<BR>\n"
+			error_msg += "ERROR: Could not set the RSYNC Proxy IP<BR>\n"
 	if not error_msg:
 		error_msg = "Values saved successfully"
 
@@ -168,7 +168,9 @@ function change_editiface() {
       Enter your IP address: <input name="ip" type="text" length="50" maxlength="15" value="192.168."><br>
       Enter your Broadcast address: <input name="broadcast" type="text" length="50" maxlength="15" value=".255"><br>
       Enter your Netmask: <input name="netmask" type="text" length="50" maxlength="15" value="255.255.255.0"><br>
-      <hr>Info for DHCP Configurations:<br>DHCP Options: <input type="text" name="dhcp_options" length="50">
+<: if shared_info.advanced_mode:
+<hr>Info for DHCP Configurations:<br>DHCP Options: <input type="text" name="dhcp_options" length="50">
+:>
     </td>
   </tr>
 </table>
@@ -195,8 +197,9 @@ You must configure a device first in order to set the default Gateway!<br>
   </tr>
 :>
   <tr>
-    <td>Address:<input name="gateway" type="text" length="50" maxlength="15" value="<% gway_ip %>"><br>
+    <td>Gateway IP Address (if not DHCP):<input name="gateway" type="text" length="50" maxlength="15" value="<% gway_ip %>"><br>
         Enter your DNS servers (space-separated): <input name="dnsserver" type="text" length="70" value="<% " ".join(shared_info.install_profile.get_dns_servers()) %>">
+<: if shared_info.advanced_mode:
         <hr>Proxy Information (if necessary):<br>
         HTTP Proxy URI: <input name="http_proxy" type="text" length="70" value=""><br>
         FTP Proxy URI: <input name="ftp_proxy" type="text" length="70"  value=""><br>
@@ -205,6 +208,7 @@ You must configure a device first in order to set the default Gateway!<br>
         <p>Hostname: <input name="hostname" type="text" id="hostname"> </p>
         <p>Domainname: <input name="domainname" type="text" id="domainname"> </p>
         <p>NIS Domainname:  <input name="nisdomainname" type="text" id="nisdomainname"> </p>
+:>
         <p> <input name="savenetwork" type="submit" id="savenetwork" value="Save Network Information"></p>
     </td>
   </tr>
