@@ -11,6 +11,14 @@ if get_params['zonepath']:
 			error_msg = "Timezone Set"
 		except:
 			error_msg = "ERROR: Could not set that timezone!"
+		if not "UTC" in zonepath:  # set conf value to local if not already set.
+			etc_files = shared_info.install_profile.get_etc_files()
+			if not "conf.d/clock" in etc_files:
+				etc_files['conf.d/clock']['CLOCK'] = "local"
+				try:
+					shared_info.install_profile.set_etc_files(etc_files)
+				except:
+					error_msg += "ERROR: Could not set the clock to local!"
 else:
 	zonepath = "/usr/share/zoneinfo/"
 skiplist = ["zone.tab","iso3166.tab","posixrules"]
