@@ -88,9 +88,11 @@
         <li><a href="/webgli/portagetree.pyhtml">Portage Tree</a></li>
         <li><a href="/webgli/globaluse.pyhtml">Global USE Flags</a></li>
         <li><a href="/webgli/localuse.pyhtml">Local USE Flags</a></li>
+<: if shared_info.advanced_mode:
         <li><a href="/webgli/makedotconf.pyhtml">Make.conf</a></li>
         <li><a href="/webgli/configfiles.pyhtml">Config Files</a></li>
 		<li><a href="/webgli/etc_portage.pyhtml">etc/portage</a></li>
+:>
         <li><a href="/webgli/kernel.pyhtml">Kernel</a></li>
         <li><a href="/webgli/bootloader.pyhtml">Bootloader</a></li>
         <li><a href="/webgli/timezone.pyhtml">Timezone</a></li>
