@@ -1,10 +1,15 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.563 2006/01/03 04:09:36 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.564 2006/01/06 04:39:05 codeman Exp $
 
 *GLI-0.3 (27 Oct 2005)
 
+  5 Jan 2006; Preston Cody <codeman@gentoo.org>
+  AT: bootsplash is now gensplash
+  gliserv: add advanced_mode to shared_info
+  webgli: Added advanced mode.  mostly just disables a few screens.
+  
   2 Jan 2006; Andrew Gaffney <agaffney@gentoo.org>
   src/GLIPortage.py:
   get_deps() calls 'emerge -p' and then removed packages that aren't in vdb
